@@ -3,179 +3,190 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="5dip">
+    android:padding="2dip">
 
     <!--  ListRow Left side Contact Picture -->
     <LinearLayout
-        android:id="@+id/thumbnail"
+        android:id="@+id/photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginEnd="3dp"
-        android:background="@drawable/image_bg"
-        android:padding="3dip">
+        android:background="@drawable/image_bg">
 
         <ImageView
             android:id="@+id/ivContactPicture"
-            android:layout_width="64dip"
-            android:layout_height="70dp"
+            android:layout_width="74dip"
+            android:layout_height="80dp"
             android:contentDescription="@string/image" />
-
     </LinearLayout>
 
-    <!-- Contact Name -->
-    <TextView
-        android:id="@+id/tvContactName"
+    <RelativeLayout
+        android:id="@+id/data"
+        android:layout_marginLeft="5dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/thumbnail"
-        android:layout_toEndOf="@+id/thumbnail"
-        android:layout_toStartOf="@+id/tvContactAge"
-        android:singleLine="true"
-        android:text="@string/string"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:typeface="sans" />
-
-
-    <!-- next birthday week name -->
-    <TextView
-        android:id="@+id/tvContactNextBirthDayWeekName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvContactName"
-        android:layout_marginTop="1dip"
-        android:layout_toEndOf="@+id/thumbnail"
-        android:layout_toStartOf="@+id/tvBirthDay"
-        android:singleLine="true"
-        android:text="@string/string"
-        android:textSize="12sp" />
-
-    <!-- Days to go to her/his birthday -->
-    <TextView
-        android:id="@+id/tvContactDaysUntil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvContactNextBirthDayWeekName"
-        android:layout_marginTop="1dip"
-        android:layout_toEndOf="@+id/thumbnail"
-        android:layout_toStartOf="@+id/tvZodiac"
-        android:singleLine="true"
-        android:text="@string/string"
-        android:textSize="12sp" />
-
-    <!-- Contact Age -->
-    <TextView
-        android:id="@+id/tvContactAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@id/tvContactName"
-        android:layout_marginEnd="5dip"
-        android:gravity="end"
-        android:text="@string/string"
-        android:textColor="?android:attr/colorAccent"
-        android:textSize="12sp"
-        android:textStyle="bold" />
-
-    <!-- BirthDay -->
-    <TextView
-        android:id="@+id/tvBirthDay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@id/tvContactNextBirthDayWeekName"
-        android:layout_below="@id/tvContactAge"
-        android:layout_marginEnd="5dip"
-        android:gravity="end"
-        android:text="@string/string"
-        android:textColor="?android:attr/colorAccent"
-        android:textSize="12sp"
-        android:textStyle="bold" />
-
-    <!-- Sign/Element -->
-    <TextView
-        android:id="@+id/tvZodiac"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@id/tvContactDaysUntil"
-        android:layout_below="@id/tvContactAge"
-        android:layout_marginEnd="5dip"
-        android:gravity="end"
-        android:text="@string/string"
-        android:textColor="?android:attr/colorAccent"
-        android:textSize="12sp"
-        android:textStyle="bold" />
-
-    <LinearLayout
-        android:id="@+id/emojiPartyTomorrow"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/tvContactDaysUntil"
-        android:layout_toEndOf="@+id/thumbnail"
-        android:layout_toStartOf="@+id/emojiParty"
-        android:gravity="start"
+        android:padding="5dip"
         android:orientation="horizontal"
-        android:padding="3dip">
+        android:layout_toEndOf="@id/photo">
 
-        <ImageView
-            android:layout_width="16dip"
-            android:layout_height="16dip"
-            android:contentDescription="@string/image"
-            android:src="@drawable/ic_party_01" />
+        <RelativeLayout
+            android:id="@+id/left"
+            android:layout_marginRight="5dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_alignParentStart="true">
 
-        <ImageView
-            android:layout_width="16dip"
-            android:layout_height="16dip"
-            android:contentDescription="@string/image"
-            android:src="@drawable/ic_party_02" />
-    </LinearLayout>
+            <!-- Contact Name -->
+            <TextView
+                android:id="@+id/tvContactName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:layout_alignParentStart="true"
+                android:text="@string/string"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:typeface="sans" />
 
-    <!--  ListRow Left side Emojis -->
-    <LinearLayout
-        android:id="@+id/emojiParty"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/tvContactDaysUntil"
-        android:layout_toEndOf="@+id/thumbnail"
-        android:gravity="end"
-        android:orientation="horizontal"
-        android:padding="3dip">
+            <!-- next birthday week name -->
+            <TextView
+                android:id="@+id/tvContactNextBirthDayWeekName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvContactName"
+                android:layout_alignParentStart="true"
+                android:singleLine="true"
+                android:text="@string/string"
+                android:textSize="12sp" />
 
-        <ImageView
-            android:layout_width="16dip"
-            android:layout_height="16dip"
-            android:contentDescription="@string/image"
-            android:src="@drawable/ic_party_03" />
+            <!-- Days to go to her/his birthday -->
+            <TextView
+                android:id="@+id/tvContactDaysUntil"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvContactNextBirthDayWeekName"
+                android:layout_alignParentStart="true"
+                android:singleLine="true"
+                android:text="@string/string"
+                android:textSize="12sp" />
 
-        <ImageView
-            android:layout_width="16dip"
-            android:layout_height="16dip"
-            android:contentDescription="@string/image"
-            android:src="@drawable/ic_party_04" />
+        </RelativeLayout>
 
-        <ImageView
-            android:layout_width="16dip"
-            android:layout_height="16dip"
-            android:contentDescription="@string/image"
-            android:src="@drawable/ic_party_05" />
+        <RelativeLayout
+            android:id="@+id/right"
+            android:layout_toEndOf="@id/left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="16dip"
-            android:layout_height="16dip"
-            android:contentDescription="@string/image"
-            android:src="@drawable/ic_party_06" />
+            <!-- Contact Age -->
+            <TextView
+                android:id="@+id/tvContactAge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:gravity="end"
+                android:text="@string/string"
+                android:textColor="?android:attr/colorAccent"
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
-        <ImageView
-            android:layout_width="16dip"
-            android:layout_height="16dip"
-            android:contentDescription="@string/image"
-            android:src="@drawable/ic_party_07" />
+            <!-- BirthDay -->
+            <TextView
+                android:id="@+id/tvBirthDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvContactAge"
+                android:layout_alignParentEnd="true"
+                android:gravity="end"
+                android:text="@string/string"
+                android:textColor="?android:attr/colorAccent"
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
+            <!-- Sign/Element -->
+            <TextView
+                android:id="@+id/tvZodiac"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvBirthDay"
+                android:layout_alignParentEnd="true"
+                android:gravity="end"
+                android:text="@string/string"
+                android:textColor="?android:attr/colorAccent"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
 
-    </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/emojs"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/right"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/emojiPartyTomorrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:gravity="end"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="16dip"
+                    android:layout_height="16dip"
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/ic_party_01" />
+
+                <ImageView
+                    android:layout_width="16dip"
+                    android:layout_height="16dip"
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/ic_party_02" />
+            </LinearLayout>
+
+            <!--  ListRow Left side Emojis -->
+            <LinearLayout
+                android:id="@+id/emojiParty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:gravity="end"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="16dip"
+                    android:layout_height="16dip"
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/ic_party_03" />
+
+                <ImageView
+                    android:layout_width="16dip"
+                    android:layout_height="16dip"
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/ic_party_04" />
+
+                <ImageView
+                    android:layout_width="16dip"
+                    android:layout_height="16dip"
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/ic_party_05" />
+
+                <ImageView
+                    android:layout_width="16dip"
+                    android:layout_height="16dip"
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/ic_party_06" />
+
+                <ImageView
+                    android:layout_width="16dip"
+                    android:layout_height="16dip"
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/ic_party_07" />
+            </LinearLayout>
+        </RelativeLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
