@@ -1,3 +1,6 @@
+* V32
+- Better list layout
+
 * V31
 - Settings to go back to the old statistics view
 - Code refactoring (First part)
